--- a/smurfs/src/components/App.css
+++ b/smurfs/src/components/App.css
@@ -1,5 +1,28 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  margin: 0 auto;
+}
+
+input {
+  margin: 2% 0;
+  height: 25px;
+}
+
+button {
+  background: white;
+  border: 1px solid black;
+  border-radius: 10px;
+  height: 25px;
+  width: 250px;
+  margin: 0 auto;
 }
 
 .App-logo {
@@ -26,3 +49,5 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+
